<resources>
    <string name="app_name">FeedsIn</string>
    <string name="bt_read_more">Read more...</string>
    <string name="refresh_menu">Refresh</string>

    <string name="import_opml">Import OPML</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_content">Manage content</string>
    <string name="create_group">Create group</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="create_feed">Create feed</string>
    <string name="delete_item">Delete</string>
    <string name="feed_title">Title</string>
    <string name="feed_url">URL:</string>
    <string name="search_for_content">Search for content</string>
    <string name="save_feed">Save feed</string>
    <string name="feed_group_title">Group:</string>
    <string name="save_group">Save changes</string>
</resources>
