<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.FeedPropsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/feed_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_title"
            tools:text="Title" />

        <EditText
            android:id="@+id/feed_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:text="Habr the best" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/feed_url_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_url"
            tools:text="URL:" />

        <EditText
            android:id="@+id/feed_url_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri|textMultiLine"
            android:maxLines="3"
            android:minLines="1"
            tools:text="https://habr.com/rss/hub/apps_design/all/?hl=ru&amp;fl=ru" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/feed_group_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feed_group_title" />

        <Spinner
            android:id="@+id/group_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>